# ssftpd

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  ROADMAP.md  ROADMAP_CHECKLIST.md  docker-compose.yml
deployment/: README.md  modules.conf  sites.conf
deployment/conf.d/: global.conf
deployment/configs/: simple-tftpd.conf
deployment/configs/instances/: firmware.conf  pxe.conf  secure.conf
deployment/docs/: README.md  ssl-certbot-guide.md
deployment/examples/advanced/: README.md
deployment/examples/docker/: README.md  docker-compose.yml
deployment/examples/simple/: README.md
deployment/init.d/: simple-tftpd
deployment/modules-available/: auth.conf  rate_limit.conf  ssl-advanced.conf  ssl.conf
deployment/scripts/: install.sh
deployment/sites-available/: default.conf  example.com.conf
deployment/systemd/: simple-tftpd.service  simple-tftpd.target  simple-tftpd@.service
docs/: README.md
docs/configuration/: README.md
docs/deployment/: README.md  docker.md
docs/installation/: README.md
docs/user-guide/: README.md
etc/: README.md
etc/launchd/: com.ssftpd.ssftpd.plist
etc/windows/: install-service.bat
packaging/: README.md
packaging/deb/debian/: control  rules
packaging/windows/: installer.nsi
scripts/: build-docker.sh  deploy-docker.sh
src/: main.cpp
src/core/: ftp_connection.cpp  ftp_connection_manager.cpp  ftp_rate_limiter.cpp  ftp_server.cpp  ftp_statistics.cpp  ftp_user.cpp  ftp_user_manager.cpp  ftp_virtual_host.cpp  ftp_virtual_host_manager.cpp
src/tests/: CMakeLists.txt  test_main.cpp
src/tests/unit/: test_ftp_user.cpp
src/tests/utils/: test_helpers.cpp  test_helpers.hpp
src/utils/: ftp_server_config.cpp  logger.cpp
